# GeMusic

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  main.yml
config/: gemusic.yaml.example
include/gemusic/: error.h  logger.h
include/gemusic/auth/: login_manager.h
include/gemusic/config/: settings.h
include/gemusic/lyrics/: lrc_parser.h  lyrics_manager.h
include/gemusic/network/: api_client.h  netease_api.h  netease_crypto.h
include/gemusic/player/: music_player.h
include/gemusic/ui/: app_ui.h
src/: api_client.cpp  app_ui.cpp  local_library.cpp  logger.cpp  login_manager.cpp  lrc_parser.cpp  lyrics_manager.cpp  main.cpp  music_player.cpp  netease_api.cpp  netease_crypto.cpp  settings.cpp
tests/: test_config.cpp
